2001-06-08  Dan Mueth  <d-mueth@uchicago.edu>

	Updating Nautilus Release Notes for 1.0.4.  Note that we
	probably still need to modify the Mozilla compatibility 
	section.

	* help/nautilus-release-notes/C/nautilus-release-notes.sgml:

2001-06-07  Dan Mueth  <dan@eazel.com>

	Updating Nautilus Quick Reference for 1.0.4 release.

	* help/nautilus-quick-reference/C/index.html:

2001-06-06  Darin Adler  <darin@bentspoon.com>

	* NEWS: Made a list of changes since 1.0.3 to get ready for
	the 1.0.4 release.

2001-06-06  Darin Adler  <darin@bentspoon.com>

	* components/music/nautilus-music-view.c: (play_current_file):
	* libnautilus-private/nautilus-icon-factory.c: (get_cache_time):
	* src/nautilus-window-menus.c: (get_static_bookmarks_file_path):
	Oops, a few of my changes were still in the editor. More places
	where we should follow links.

2001-06-06  Darin Adler  <darin@bentspoon.com>

	Frederic Devernay <Frederic.Devernay@sophia.inria.fr>
	pointed out that the icon factory wasn't following links.
	I found similar problems elsewhere.

	* components/music/nautilus-music-view.c:
	(nautilus_music_view_update):
	* libnautilus-private/nautilus-customization-data.c:
	(nautilus_customization_data_new),
	(nautilus_customization_data_get_next_element_for_display):
	* libnautilus-private/nautilus-icon-factory.c:
	(path_represents_svg_image):
	* libnautilus-private/nautilus-metafile.c:
	(metafile_read_check_for_directory):
	* libnautilus-private/nautilus-thumbnails.c:
	(first_file_more_recent):
	* src/nautilus-link-set-window.c: (get_link_set_names),
	(nautilus_link_set_configure_window):
	* src/nautilus-property-browser.c: (ensure_uri_is_image):
	Updated all places where we were using the gnome-vfs file info
	calls and not following links.

2001-06-03  Seth Nickell  <snickell@stanford.edu>

	Added Ben FrantzDale's <bfrantzdale@hmc.edu> revisions
	of the classic GNOME theme as well as his slightly revised
	classic icons for mime types (where they replace something